[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retrograde-mcp"
version = "0.1.1"
description = "MCP server: real planetary retrograde detection + NOAA space weather for CI/CD pipelines"
authors = [{ name = "Griboedow (Nikolai Kochkin)" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["mcp", "astrology", "astronomy", "planets", "retrograde", "devops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "skyfield>=1.46",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]

[project.scripts]
retrograde-mcp = "retrograde_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Griboedow/Retrograde-MCP"
Issues = "https://github.com/Griboedow/Retrograde-MCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/retrograde_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
